IndexedDB: Invalid keys yielded by key paths should raise exceptions, not error callbacks https://bugs.webkit.org/show_bug.cgi?id=76075

Reviewed by Tony Chang.

Source/WebCore:

Tests: storage/indexeddb/objectstore-basics.html

* storage/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::put):

LayoutTests:

* storage/indexeddb/mozilla/bad-keypath-expected.txt:
* storage/indexeddb/mozilla/bad-keypath.html:
* storage/indexeddb/objectstore-basics-expected.txt:
* storage/indexeddb/objectstore-basics.html:


Canonical link: https://commits.webkit.org/93403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105329 268f45cc-cd09-0410-ab3c-d52691b4dbfc